:sparkles: fazendo estrutura html e css

--- a/src/app/jogo-da-velha/jogo-da-velha.component.html
+++ b/src/app/jogo-da-velha/jogo-da-velha.component.html
@@ -1,1 +1,25 @@
-<p>jogo-da-velha works!</p>
+<div container class="inicio">
+  <h1>Jogo da Velha</h1>
+  <button type="button">Jogar</button>
+</div>
+
+<div container class="tabuleiro">
+  <ul>
+    <li bottom right></li>
+    <li bottom right></li>
+    <li bottom></li>
+    <li bottom right></li>
+    <li bottom right></li>
+    <li bottom></li>
+    <li right></li>
+    <li right></li>
+    <li></li>
+  </ul>
+</div>
+
+<div container class="fim-de-jogo">
+  <h1 mensagem class="vitoria">Que incrível, você venceu... 🥳🎉</h1>
+  <h1 mensagem class="derrota">Lamento, mas não foi dessa vez... 🥺</h1>
+  <h1 mensagem class="empate">Parabéns, ambos são o número um... 🥇🥇</h1>
+  <button>Jogar de novo</button>
+</div>
