--- a/src/app/jogo-da-velha/jogo-da-velha.component.less
+++ b/src/app/jogo-da-velha/jogo-da-velha.component.less
@@ -23,6 +23,14 @@
 }
 
 .tabuleiro {
+  h1 {
+    margin: 0;
+    margin-bottom: 3rem;
+    font-size: 3rem;
+    font-family: "Concert One", cursive;
+    color: #508ca4;
+    text-shadow: 0.1em 0.1em 0.2em rgb(223, 220, 220);
+  }
   ul {
     margin: 1rem;
     padding: 0;
@@ -54,12 +62,16 @@
     }
   }
 
-  [img-x] {
+  .img-x {
     background-image: url("/assets/x.svg");
   }
 
-  [img-o] {
+  .img-o {
     background-image: url("/assets/o.svg");
+  }
+
+  .vitoria {
+    background-color: #0a8754;
   }
 }
 
