--- a/src/app/jogo-da-velha/jogo-da-velha.component.html
+++ b/src/app/jogo-da-velha/jogo-da-velha.component.html
@@ -95,8 +95,8 @@
 </div>
 
 <div container class="fim-de-jogo" *ngIf="showFinal">
-  <h1 mensagem class="vitoria">Que incrível, você venceu... 🥳🎉</h1>
-  <h1 mensagem class="derrota">Lamento, mas não foi dessa vez... 🥺</h1>
-  <h1 mensagem class="empate">Parabéns, ambos são o número um... 🥇🥇</h1>
+  <h1 *ngIf="jogador==2" mensagem class="vitoria">Que incrível, você venceu... 🥳🎉</h1>
+  <h1 *ngIf="jogador==1" mensagem class="derrota">Lamento, mas não foi dessa vez... 🥺</h1>
+  <h1 *ngIf="jogador==0" mensagem class="empate">Parabéns, ambos são o número um... 🥇🥇</h1>
   <button type="button" (click)="novoJogo()">Jogar de novo</button>
 </div>
